--- a/package.json
+++ b/package.json
@@ -22,10 +22,14 @@
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
     "body-parser": "^1.17.2",
+    "cookie-parser": "^1.4.3",
     "core-js": "^2.4.1",
     "express": "^4.15.3",
+    "express-session": "^1.15.6",
     "http": "0.0.0",
     "mongoose": "^4.11.4",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "path": "^0.12.7",
     "rxjs": "^5.4.2",
     "zone.js": "^0.8.14"
